resources/public/css/style.css
h1 {
  text-decoration: underline;
}

input {
  width: 100%;
  font-size: 2rem;
  margin: 0.5rem;
}

form {
  max-width: 80%;
  margin: 0 auto;
  padding: 1rem;
}

button {
  font-size: 2rem;
}

body {
  color: #eeeef0;
  font-size: 1.4em;
  font-family: Tahoma;
  background-color: #223;
}

.lobby {
  max-width: 80%;
  margin: 0 auto;
}

.lobby li {
  border: 1px solid #bbb;
  font-size: 2rem;
  list-style: none;
  padding: 0.6rem;
}

.lobby .boot {
  cursor: pointer;
  padding: 0.6rem 1rem;
  margin-top: -0.6rem;
  margin-right: -0.6rem;
  overflow: hidden;
  color: white;
  background: red;
  float: right;
}

.game-table .active-area {
  text-align: center;
}

.game-table .active-area .x-card {
  float: right;
  background-color: #47a;
  color: white;
}

.game-table .active-area .x-card.active {
  background-color: red;
  color: white;
}

.game-table .active-area .x-card a {
  display: block;
  padding: 0.9rem 0.7rem;
  cursor: pointer;
}

.game-table .actions {
  position: fixed;
  width: 100%;
  bottom: 0px;
}

.game-table .action {
  width: 80%;
  background: #222;
  border: 1px solid white;
  cursor: pointer;
  margin: 1rem auto;
  border-radius: 0.2rem;
  box-shadow: 2px 2px 4px #123;
}

.game-table .action a {
  display: block;
  padding: 1rem;
}

.game-table .card {
  font-family: Georgia;
  margin: 0.5rem;
  border: 0.4rem solid #efefef;
  padding: 2.2rem 1.2rem;
  box-shadow: 2px 2px 4px #123;
  font-size: 1.8rem;
  background-color: #efefef;
  border-radius: 0.2rem;
  color: #224;
}

.game-table .card.intro {
  border-color: #aab;
}

.game-table .card.question {
  border-color: #47a;
}

.game-table .card.x-carded {
  border-color: red;
}

